--- a/skript/algorithm.tex
+++ b/skript/algorithm.tex
@@ -317,7 +317,7 @@ Man findet folgende numerischen Resultate:
 Tats"achlich konvergiert die Folge gegen die korrekte L"osung.
 Genauer: der Fehler wird in jedem Iterationsschritt halbiert,
 man gewinnt also ein Bit Genauigkeit in jedem Schritt. F"ur dieses
-spezielle Gleichungssystem w"ahren also etwa dreissig Iterationsschritte
+spezielle Gleichungssystem w"aren also etwa dreissig Iterationsschritte
 n"otig, um eine L"osung mit einer Genauigkeit von 10 Stellen zu erhalten.
 
 Allgemein kann man in jedem Gleichungssystem $Ax=b$ die Gleichung $i$
@@ -383,7 +383,7 @@ bei der Berchnung der beiden Summen in (\ref{gauss-seidel-iteration}).
 Es stellt sich die Frage, ob man die Konvergenz beschleunigen kann,
 ohne die Parallelisierbarkeit zu kompromittieren.
 Der Gauss-Seidel-Algorithmus zeigt, dass eine Konvergenzbeschleunigung
-m"oglich ist, man m"usste aber vom Jacobi-Algorithmus ausgehenG
+m"oglich ist, man m"usste aber vom Jacobi-Algorithmus ausgehen.
 
 
 \subsection{Matrix-Aufteilung}
