neue Aufgaben, Sprache

--- a/skript/algorithm.tex
+++ b/skript/algorithm.tex
@@ -2284,5 +2284,11 @@ Details dazu in \cite[Chapter 8.6]{skript:watkins}.
 \input 11.tex
 \item
 \input 12.tex
+\item
+\input 13.tex
+\item
+\input 14.tex
+\item
+\input 15.tex
 \end{uebungsaufgaben}
 
