--- a/skript/skript.tex
+++ b/skript/skript.tex
@@ -9,7 +9,7 @@
 \documentclass{book}
 \usepackage{geometry}
 \geometry{papersize={170mm,240mm},total={140mm,200mm},top=21mm,bindingoffset=10mm}
-\usepackage{ngerman}
+\usepackage[ngerman]{babel}
 \usepackage{times}
 \usepackage{amsmath}
 \usepackage{amssymb}
