--- a/skript/daten.tex
+++ b/skript/daten.tex
@@ -156,6 +156,7 @@ F"ur dieses Problem wurden verschiedene Datenformate geschaffen,
 wovon im folgenden drei kurz besprochen werden sollen.
 
 \subsubsection{NetCDF}
+\index{NetCDF}
 Wikipedia beschreibt NetCDF wie folgt:
 \begin{quote}
 Network Common Data Format (NetCDF) ist ein Dateiformat für den
@@ -240,6 +241,7 @@ F"ur einfache Visualiserungen der Daten in einem NetCDF File kann
 das Programm {\tt ncview} verwendet werden.
 
 \subsubsection{GRIB}
+\index{GRIB}
 Seit numerische Wetterprognosen praktikabel sind, haben
 die meteorologischen Organisationen der Welt ein Bed"urfnis,
 Daten "uber den Atmosph"arenzustand austauschen zu k"onnen.
@@ -254,6 +256,7 @@ General Regularly-distributed Information in Binary form.
 F"ur den Rest der Welt ist GRIB eine Abk"urzung f"ur GRIdded Binary.
 
 \subsubsection{FITS}
+\index{FITS}
 Oft fallen HPC-Daten in Form von Tabellen an, in diesen F"allen
 kann FITS ein geeignetes Fileformat sein. FITS bedeutet ``Flexible
 Image Transport System''.
@@ -332,8 +335,10 @@ und zierten das Titelblatt der Zeitschrift Nature vom 14.~Novebmer 2013.
 
 Zu den Benutzern von ParaView geh"oren auch das Supercomputer Center 
 in Manno und die EPFL. 
+\index{ParaView}
 
 \subsection{Visualization Toolkit}
+\index{Visualization Toolkit}
 F"ur hartn"ackige F"alle mag es notwendig sein, f"ur ein spezifisches
 Problem eine eigene Visualisierung zu entwickeln.
 In solchen F"allen ist es unabdingbar, als Grundlage eine leistungsf"ahige
@@ -344,6 +349,7 @@ VTK wird von einigen grossen Forschungslabors als Basis f"ur die
 Entwicklung ihrer eigenen Visualisierungswerkzeuge verwendet.
 
 \subsection{Videos}
+\index{Video}
 Videos machen die Resultate einer komplexen Simulation auch einem
 Betrachter zug"anglich, der nicht die Computer-Resourcen hat, sie sich
 direkt mit einem Werkzeug wie Paraview anzuschauen. Insbeondere  sind
@@ -352,6 +358,8 @@ Videos auch gut geeignet f"ur Pr"asentationen oder f"ur Websites.
 ParaView ist in der Lage, animierte Resultatpr"asentationen als eine 
 Folge von Bildern zu exportieren. Bildverarbeitungswerkzeuge wie
 ImageMagick k"onnen daraus MJPEG-Streams erzeugen, die mit den
+\index{ImageMagick}
+\index{MJPEG}
 MJPEG-Tools und {\tt mpeg2enc} als MPEG Videos codiert werden k"onnen.
 In dieser Form k"onnen Sie auch auf Video-Websites wie Youtube hochgeladen
 werden, oder sie k"onnen in Pr"asentationen integriert werden.
