--- a/skript/heat/heat.tex
+++ b/skript/heat/heat.tex
@@ -2,7 +2,7 @@
 \rhead{W"armeleitungsgleichung}
 
 \chapterauthor{Andreas M"uller}
-
+\index{Warmeleitung@W\"armeleitung}
 Die W"armeleitungsgleichung ist die prototypische parabolische
 partielle Differentialgleichung.
 In diesem Kapitel werden die Eigenheiten ihrer numerischen L"osung
@@ -21,6 +21,7 @@ Der Stab soll an den Enden mit W"armereservoirs verbunden sein, die
 die Temperatur an den Enden festlegen. Sie kann mit der Zeit varieren.
 Dies wird ausgedr"uckt durch
 Randbedingungen
+\index{Randbedingung}
 \begin{align}
 u(t,0)&=g_0(t),
 &
@@ -239,6 +240,7 @@ Wir m"ussen also herausfinden, wie gross der Betrag des
 betragsm"assig gr"ossten Eigenwerts
 der tridiagonalen Matrix $\operatorname{tridiag}_n(1,-2,1)$ ist.
 Diese Frage wird von folgendem Satz beantwortet.
+\index{Matrix!tridiagonale}
 
 \begin{satz}
 \[
