--- a/skript/julia/julia.tex
+++ b/skript/julia/julia.tex
@@ -4,6 +4,7 @@
 
 \chapterauthor{Andreas M"uller}
 \section{Dynamische Systeme und Iteration}
+\index{dynamisches System}
 In der Analyis lernt man "uber 
 gew"ohnliche Differentialgleichung, dass L"osungen f"ur eine gewisse
 Zeit existieren und eindeutig seien.
@@ -46,6 +47,7 @@ unter Iteration zu verstehen.
 
 Die einfachste nichtlineare Abbildung in einer Dimension ist
 die sogenannte logistische Abbildung \cite{julia:logistic}
+\index{logistische Abbildung}
 \[
 f_a(x)=ax(1-x).
 \]
@@ -60,6 +62,7 @@ mit Periode zwei auf.
 Mit zunehmendem $a$ spaltet sich der Zyklus erneut auf, er durchl"auft
 eine Kaskade von Periodenverdoppelungen
 (Abbildung~\ref{julia:periodenverdoppelung}).
+\index{Periodenverdoppelung}
 \begin{figure}
 \begin{center}
 \includegraphics[width=0.7\hsize]{julia/logistic.png}
@@ -85,6 +88,8 @@ f_c(z)=z^2 + c,\qquad z,c\in\mathbb C,
 sie ist die direkte Verallgemeinerung der logistischen Abbildung auf
 komplexe Zahlen.
 Gaston Julia und Pierre Fatou haben die Iterationen rationaler 
+\index{Julia, Gaston}
+\index{Fatou, Pierre}
 Funktionen komplexer Variablen bereits zu Beginn des zwanzigsten
 Jahrhunderts studiert, ohne allerdings den Luxus moderner Computergraphik
 zur Verf"ugung zu haben. Sie haben sich speziell f"ur die Menge der
@@ -99,6 +104,7 @@ Funktion $f_c(z)$ mit Startwert $0$ beschr"ankt bleiben, heisst die
 Mandelbrot-Menge, auch als ``Apfelm"annchen'' bekannt.
 
 \section{Was sind Julia-Mengen?}
+\index{Julia-Menge}
 F"ur jede komplexe Zahl $c\in\mathbb C$ kann man die Iterationen der
 Funktion
 \begin{equation}
@@ -260,6 +266,7 @@ Eine Initialisierung des Array ist nicht n"otig.
 \end{itemize}
 
 \subsection{Julia-Mengen durch Inverse Iteration}
+\index{Inverse Iteration}
 Die hier beschriebene Methode zur Berechnung von Julia-Mengen wird in
 \cite{julia:peitgenrichter} als Inverse Iteration Method bezeichnet.
 F"ur die meisten Startpunkte konvergiert die Iterationen der Abbildung
@@ -298,8 +305,11 @@ OpenCL stellt kein API f"ur Zufallszahlen zur Verf"ugung, dies muss also
 ebenfalls im OpenCL Code implementiert werden.
 Die Anforderungen an die Qualit"at der Zufallszahlen ist nicht besonders
 hoch, ein einfacher Zufallszahlgenerator auf der Basis von linearen
+\index{Zufallszahlgenerator}
 Kongruenzen wie der Lehmer-Generator \cite{julia:lehmer},
 auch bekannt als Park-Miller Generator, reicht v"ollig aus.
+\index{Lehmer-Generator}
+\index{Park-Miller Generator}
 
 Die inverse Iteration f"uhrt f"ur stark verzweigte Julia-Mengen nicht
 zu guten Resultaten.
