--- a/skript/15.tex
+++ b/skript/15.tex
@@ -16,7 +16,7 @@ A=\begin{pmatrix}
 \]
 nach der Formel $(T^t)^{-1}AT^{-1}$ zu
 pr"akonditionieren.
-Verbessert sich dadurch die Konditionszahl gegen"uber der nich konditionierten
+Verbessert sich dadurch die Konditionszahl gegen"uber der nicht konditionierten
 Matrix $A$?
 
 \begin{loesung}
