--- a/skript/skript.tex
+++ b/skript/skript.tex
@@ -179,6 +179,8 @@ Hochschule f"ur Technik, Rapperswil, 2014
 \input sample/sample.tex
 \input julia/julia.tex
 \input heat/heat.tex
+\vfill
+\pagebreak
 \lhead{Index}
 \rhead{}
 \input skript.ind
