Verzeichnisse fuer Projekte angelegt

--- a/skript/heat/heat.tex
+++ b/skript/heat/heat.tex
@@ -2,11 +2,13 @@
 \rhead{W"armeleitungsgleichung}
 
 \chapterauthor{Andreas M"uller}
+
 \index{Warmeleitung@W\"armeleitung}
+{\parindent0pt
 Die W"armeleitungsgleichung ist die prototypische parabolische
 partielle Differentialgleichung.
 In diesem Kapitel werden die Eigenheiten ihrer numerischen L"osung
-diskutiert.
+diskutiert.}
 
 \section{Problemstellung}
 \lhead{Problemstellung}
