--- a/skript/skript.tex
+++ b/skript/skript.tex
@@ -178,6 +178,7 @@ Hochschule f"ur Technik, Rapperswil, 2014
 \part{Anwendungen und Weiterf"uhrende Themen}
 \lhead{Anwendungen}
 \def\chapterauthor#1{{\large #1}\bigskip\bigskip}
+\input anwendungen.tex
 \input sample/sample.tex
 \input julia/julia.tex
 \input apfel/apfelmaennchenInput.tex
