--- a/skript/heat/heat.tex
+++ b/skript/heat/heat.tex
@@ -49,8 +49,7 @@ hat die folgenden Ableitungen:
 \begin{align*}
 \frac{\partial u}{\partial x}&=
 -
-\frac{x}{t}
-\frac1{\sqrt{2t}}
+\frac{x}{2t}\frac1{\sqrt{2t}}
 e^{-\frac{x^2}{4t}}
 &
 \frac{\partial^2 u}{\partial x^2}&=
