Initial draft for crypto chapter

--- a/skript/skript.tex
+++ b/skript/skript.tex
@@ -58,6 +58,7 @@
 \addbibresource{sample/sample.bib}
 \addbibresource{julia/julia.bib}
 \addbibresource{apfel/apfelmaennchen.bib}
+\addbibresource{crypto/crypto.bib}
 \AtEndDocument{\clearpage\ifodd\value{page}\else\null\clearpage\fi}
 \makeindex
 \begin{document}
@@ -182,6 +183,7 @@ Hochschule f"ur Technik, Rapperswil, 2014
 \input sample/sample.tex
 \input julia/julia.tex
 \input apfel/apfelmaennchenInput.tex
+\input crypto/crypto.tex
 \input heat/heat.tex
 \vfill
 \pagebreak
