Added links to more OpenCL resources
- Linked to two introductory Youtube videos.
- Replaced old OpenCL 1.1 reference with link to registry, which
  should always contain the latest OpenCL specification.

--- a/skript/references.bib
+++ b/skript/references.bib
@@ -30,11 +30,24 @@
 	language = {english},
 }
 
-@book{skript:opencl,
-	title = {The OpenCL Specification, Version 1.1},
-	publisher = {The Kronos Group},
-	year = {2011},
-	editor = {Munshi, Aaftab},
-	url = {https://www.khronos.org/registry/cl/specs/opencl-1.1.pdf},
-	language = {english},
+@url{skript:opencl,
+	title = {OpenCL Registry},
+	author = {Khronos Group},
+	URL = {https://www.khronos.org/registry/cl/}
+}
+
+@online{skript:opencl-overview,
+	author = {A. J. Guillon},
+	title = {OpenCL 1.2: High-Level Overview},
+	year = 2013,
+	url = {https://www.youtube.com/watch?v=8D6yhpiQVVI},
+	urldate = {2014-05-12}
+}
+
+@online{skript:opencl-c,
+	author = {A. J. Guillon},
+	title = {OpenCL 1.2: OpenCL C},
+	year = 2013,
+	url = {https://www.youtube.com/watch?v=RKyhHonQMbw},
+	urldate = {2014-05-12}
 }
