--- a/skript/sprachen.tex
+++ b/skript/sprachen.tex
@@ -759,6 +759,17 @@ Kernel in Auftrag gegeben, wobei auch die Work-Group-Dimensionen
 angegeben werden m"ussen. Nach Abschluss der Rechnung werden die
 Resultatdaten mit Hilfe eines Queue-Auftrags zur"uckgelesen.
 
+\subsubsection{Weiterf"uhrende Links}
+Eine ausgezeichnete High-Level-"Ubersicht zu OpenCL 1.2 findet sich auf Youtube:
+\url{https://www.youtube.com/watch?v=8D6yhpiQVVI} \cite{skript:opencl-overview}.
+Auch die Einf"uhrung zu OpenCL C des selben Autors ist empfehlenswert:
+\url{https://www.youtube.com/watch?v=RKyhHonQMbw} \cite{skript:opencl-c}.
+
+Im Zweifelsfall ist immer ein Blick in den offiziellen
+Standard\cite{skript:opencl} oder in die Dokumentation zur
+hersteller-spezifischen Implementation hilfreich.
+
+
 \subsection{Gauss-Algorithmus}
 Die Implementation des Gauss-Algorithmus in OpenCL braucht zun"achst eine
 grosse Menge von Code, um das Compute Device zu reservieren.
