Erklaerung, warum Aufgabe 13 nicht konvergiert

--- a/skript/13.tex
+++ b/skript/13.tex
@@ -3,10 +3,10 @@ F"uhren Sie f"ur das Gleichungssystem
 \begin{linsys}{3}
 x&+&y& & &=&1\\
 x&+&y&+&z&=&2\\
- & &y&+&Z&=&3
+ & &y&+&z&=&3
 \end{linsys}
 \]
-Abstiesschritte ausgehend vom Punkt $x_0=(1,0,-1)$ durch, und zwar
+je einen Abstiesschritt ausgehend vom Punkt $x_0=(1,0,-1)$ durch, und zwar
 \begin{teilaufgaben}
 \item
 mit Abstiegsrichtung
@@ -76,3 +76,7 @@ x_1&=x_0-\frac{20}{36}p
 \end{teilaufgaben}
 \end{loesung}
 
+\begin{diskussion}
+Die Matrix $A$ in der letzten Aufgabe ist nicht positiv definit,
+man kann also nicht erwarten, dass das Verfahren konvergiert.
+\end{diskussion}
