Einleitung zu Anwendungen

--- a/skript/anwendungen.tex
+++ b/skript/anwendungen.tex
@@ -30,3 +30,24 @@ Raum bilden, w"achst die Datenflut bei Steigerung der Aufl"osung mit
 der vierten Potenz an, und auch die Visualisierung dieser grossen Datenmengen
 ist nicht trivial.
 
+{\em Gregor Dengler} hat sich mit OpenFOAM, einem Open Source
+System zur L"osung partieller Differentialgleichungen befasst, und berichtet
+"uber dessen Nutzen, aber auch "uber die speziellen Schwierigkeiten,
+die man mit so einem Produkt treffen kann.
+
+{\em Dorian Amiet} und {\em Hannes Badertscher} haben Experimente mit
+Monte Carlo Simulationen gemacht, und sind beim Einsatz von OpenCL auf
+einige spezielle Schwierigkeiten gestossen. Sie untersuchen vor allem auch
+das Problem, wie man Zufallszahlen ausreichend hoher Qualit"at f"ur 
+solche Simulationen in einer OpenCL Anwendung bekommen kann.
+
+{\em Daniel Monti} und {\em Pascal Stump} haben versucht, das Konzept
+von Map-Reduce auf die Berechnung des Eigenvektors zum Eigenwert $1$
+einer Wahrscheinlichkeitsmatrix zu adaptieren. Sie haben dazu eine eigene,
+parallesierbare Version des Potenzalgorithmus gefunden.
+
+{\em Felix Hofer} zeigt, wie Successive Overrelaxation die
+Konvergenz eines iterativen Verfahrens zur L"osung linearer Gleichungen
+verbessern kann.
+
+
