Inhaltsverzeichnis etwas erweitert

--- a/skript/crypto/crypto.tex
+++ b/skript/crypto/crypto.tex
@@ -206,9 +206,15 @@ $ echo -n "monkey" | md5sum
 d0763edaa9d9bd2a9516280e9044d885
 \end{verbatim}
 
+\section{Umsetzung mit OpenCL}
+
+- Wir haben OpenCL gewählt
+- Warum?
+
 \section{Probleme mit grossen Problemen}
 
 - Wo stossen wir an unsere Grenzen?
+- Bezug/Referenz auf Einleitung (Überlegungen zum Keyspace)
 - Was gibt es f"ur L"osungsans"atze?
 
 \section{L"osungsansatz}
